# pre-commit-hooks

./: .pre-commit-hooks.yaml  setup.cfg
pre_commit_hooks/: api_checker.py
