[metadata]
name = pre_commit_hooks
version = 1.0.0
description = Some Dalet hooks for pre-commit.
url = https://github.com/dalet-oss/pre-commit-hooks

[options]
packages = find:
install_requires =
    PyYAML>=6.0
python_requires = >= 3.9

pyyaml

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    api-checker = pre_commit_hooks.api_checker:main

[bdist_wheel]
universal = True
